LogFile - Enable/Disable the Add/Change/Remove filter buttons depending on whether an item is selected etc

This fixes a crash when you click "Change" with nothing selected

BUG:261928